@@ -1,5 +1,12 @@
 2014-08-28  Richard Sandiford  <rdsandiford@googlemail.com>
 
+	* sel-sched.c: Include rtl-iter.h
+	(count_occurrences_1): Delete.
+	(count_occurrences_equiv): Turn rtxes into const_rtxes.
+	Use FOR_EACH_SUBRTX rather than for_each_rtx.
+
+2014-08-28  Richard Sandiford  <rdsandiford@googlemail.com>
+
 	* rtl.h (tls_referenced_p): Take a const_rtx rather than an rtx.
 	* rtlanal.c (tls_referenced_p_1): Delete.
 	(tls_referenced_p): Take a const_rtx rather than an rtx.
